@@ -3,6 +3,7 @@ Changes in 23.4
 	* killall: check also truncated 16 char comm names Debian #912748
 	* fuser: Return early if have nulls !18
 	* peekfd: Add support for ARM64 !19
+	* fuser: Use larger inode sizes #16
 Changes in 23.2
 ===============
 	* misc: Command names increased from 16 to 64 characters
